# fount

./: Cargo.toml  README.md  layout_out.txt
archived/fello/: README.md
archived/fello/src/: setting.rs
archived/fello/src/meta/: attributes.rs  charmap.rs  metrics.rs
archived/fello/src/scale/: mod.rs
archived/fello/src/scale/cff/: hint.rs  mod.rs
archived/fello/src/scale/glyf/: scaler.rs
archived/fello/src/scale/glyf/hint/: cache.rs  math.rs  mod.rs
archived/fount/: Cargo.toml  README.md
archived/fount/examples/: itemize.rs
archived/fount/src/: lib.rs  library.rs  scan.rs
archived/fount/src/platform/: macos.rs  windows.rs
examples/: itemize.rs
fello/: Cargo.toml
fello/src/: instance.rs  lib.rs  palette.rs  provider.rs
fello/src/meta/: attributes.rs  info_strings.rs  metrics.rs  mod.rs  provider.rs
fello/src/meta/variations/: axis.rs  instance.rs  mod.rs
fello/src/scale/: color.rs  mod.rs  path.rs  scaler.rs  transform.rs
fello/src/scale/color/: mod.rs  paint.rs  transform.rs
fello/src/scale/colr/: mod.rs
fello/src/scale/glyf/: mod.rs  scaler.rs
fello/src/scale/glyf/hint/: bytecode.rs  cache.rs  interpret.rs  state.rs
fello/src/variation/: axes.rs  mod.rs  named_instances.rs
feta/: Cargo.toml  README.md
feta/src/: attributes.rs  char_map.rs  charmap.rs  glyph_metrics.rs  lib.rs  localized_strings.rs  metrics.rs  sequence.rs  setting.rs  variations.rs
fontique/: Cargo.toml
fontique/examples/: dump.rs
fontique/src/: attributes.rs  collection.rs  family_name.rs  font.rs  generic.rs  lib.rs  scan.rs  script.rs
fontique/src/backend/: dwrite.rs
fontique/src/backend/fontconfig/: cache.rs  mod.rs
fontique/src/backend/fontconfig/cache_parser/: data.rs  mod.rs  ptr.rs
fontique/src/collection/: mod.rs
layir/: Cargo.toml  layout_out.txt  layout_out2.txt
layir/src/: glyph_names.rs  lib.rs  main.rs
layir/src/ir/: filter.rs  layout.rs  mod.rs  pos.rs  raise.rs  sub.rs  value.rs
src/: context.rs  data.rs  font.rs  id.rs  lib.rs  library.rs  locale.rs  scan.rs
src/platform/: macos.rs  windows.rs
