[package]
name = "fello"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Metadata and glyph loading for OpenType fonts."
repository = "https://github.com/dfrg/fount"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]
publish = false

[features]
default = ["scale", "hinting"]
scale = []
hinting = []

# [dependencies]
# read-fonts = { git = "https://github.com/googlefonts/fontations/" }

# [dev-dependencies]
# font-test-data = { git = "https://github.com/googlefonts/fontations/" }

[dependencies]
read-fonts = { path = "../../fontations/read-fonts" }

[dev-dependencies]
font-test-data = { git = "https://github.com/googlefonts/fontations/" }

# cargo-release settings
[package.metadata.release]
release = false
