[package]
name = "fello"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Metadata and glyph loading for OpenType fonts."
repository = "https://github.com/dfrg/fount"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]
publish = false

[features]
default = ["scale", "hinting"]
scale = []
hinting = []

[dependencies]
read-fonts = "0.10.0"

[dev-dependencies]
font-test-data= { git = "https://github.com/googlefonts/fontations", rev = "91ebdfd91bec9ae4ec34f6a7d5f01736b1b2eb6e" }
read-fonts = { version = "0.10.0", features = ["scaler_test"] }

# cargo-release settings
[package.metadata.release]
release = false
